--- a/public/css/index.css
+++ b/public/css/index.css
@@ -61,6 +61,7 @@ body {
   font-size: 9rem;
   color: var(--constant-text);
   line-height: 7.5rem;
+  overflow-y: hidden;
 }
 
 .activity-header {
@@ -68,6 +69,7 @@ body {
   font-weight: 900;
   font-size: 6rem;
   color: #5F213D;
+  overflow-y: hidden;
 }
 
 .lp-intro {
@@ -83,6 +85,7 @@ body {
   font-size: 2em;
   line-height: 2.5rem;
   color: var(--constant-text);
+  overflow-y: hidden;
 }
 
 .lp-left {
@@ -120,6 +123,7 @@ body {
   font-weight: bold;
   color: #5F213D;
   line-height: 1.5rem;
+  overflow-y: hidden;
 }
 
 .activities-contain {
@@ -275,11 +279,13 @@ body {
   .main-header {
     font-size: 2rem;
     line-height: 2rem;
+    overflow-y: hidden;
   }
 
   .activity-header {
     font-size: 3.5rem;
     line-height: 3.5rem;
+    overflow-y: hidden;
   }
 
   .lp-intro {
@@ -302,6 +308,7 @@ body {
   .second-intro-text {
     font-size: 0.8rem;
     line-height: 0.8rem;
+    overflow-y: hidden;
   }
 
   .card {
@@ -353,6 +360,7 @@ body {
   .main-header {
     font-size: 2rem;
     line-height: 2rem;
+    overflow-y:hidden;
   }
 
   .activity-header {
@@ -360,6 +368,7 @@ body {
     line-height: 2rem;
     padding-top: 1rem;
     padding-bottom: 1rem;
+    overflow-y: hidden;
   }
 
   .lp-intro {
@@ -382,6 +391,7 @@ body {
   .second-intro-text {
     font-size: 0.8rem;
     line-height: 0.8rem;
+    overflow-y: hidden;
   }
 
   .card {
@@ -428,6 +438,7 @@ body {
   .main-header {
     font-size: 3rem;
     line-height: 3rem;
+    overflow-y: hidden;
   }
 
   .activity-border {
